add ingredient get names api
