# src/main/kotlin/ru/trishlex/ingredient/model/IngredientName.kt
@@ -1,0 +1,13 @@
+package ru.trishlex.ingredient.model
+
+import org.openapitools.model.IngredientNameDTO
+
+data class IngredientName(
+    val id: Int,
+    val name: String
+) {
+
+    fun toDto(): IngredientNameDTO {
+        return IngredientNameDTO(id, name)
+    }
+}
